// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not set the textarea to resizable when viewed on browser with DocumentTouch 1`] = `
<textarea
  class="textarea"
  rows="2"
/>
`;

exports[`should not set the textarea to resizable when viewed on browser with maxTouchPoints 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
/>
`;

exports[`should not set the textarea to resizable when viewed on browser with msMaxTouchPoints 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
/>
`;

exports[`should not set the textarea to resizable when viewed on browser with ontouchstart 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
/>
`;

exports[`should render a TextArea when all the possible props are passed into it 1`] = `
<textarea
  aria-label="label"
  aria-required="true"
  class="textarea"
  name="description"
  required=""
  rows="5"
/>
`;

exports[`should render a default TextArea component 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
/>
`;

exports[`should render a full size textbox appropriately 1`] = `
<textarea
  aria-label="label"
  class="textarea full-size"
/>
`;

exports[`should render a large textbox appropriately 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="10"
/>
`;

exports[`should render a medium textbox appropriately 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="5"
/>
`;

exports[`should render a small textbox appropriately 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
/>
`;

exports[`should render as controlled when just a default value is passed into the Textarea 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
>
  foo
</textarea>
`;

exports[`should render as uncontrolled when just a default value is passed into the Textarea 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="2"
>
  foo
</textarea>
`;

exports[`should set the onChange and onFocus functions appropriately when the textarea is autoResizable 1`] = `
<textarea
  aria-label="label"
  class="textarea resizable"
  rows="2"
/>
`;

exports[`should set the rows attribute appropriate when it is passed into the textarea 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  rows="7"
/>
`;

exports[`should set the textarea as auto resizable when isAutoResizable is passed into the component 1`] = `
<textarea
  aria-label="label"
  class="textarea resizable"
  rows="2"
/>
`;

exports[`should set the textarea to disabled when passed into the component 1`] = `
<textarea
  aria-label="label"
  class="textarea"
  disabled=""
  rows="2"
/>
`;

exports[`should set the textarea to invalid when isInvalid is passed into the component 1`] = `
<textarea
  aria-label="label"
  class="textarea form-error"
  rows="2"
/>
`;

exports[`should set the textarea to resizable when viewed on a large device 1`] = `
<textarea
  aria-label="label"
  class="textarea resizable"
  rows="2"
/>
`;
